--- a/profile.html
+++ b/profile.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/DENO/src/profile.js"></script>
+    <script type="module" src="/src/profile.js"></script>
     
 </html>
